# monitoring_linux_events

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
cmake/: options.cmake  toolchain.cmake  utils.cmake
libraries/: CMakeLists.txt
libraries/bpf_utils/: CMakeLists.txt
libraries/bpf_utils/include/bpf_utils/: bpfmap.h  sectionmemorymanager.h  utils.h
libraries/llvm/: CMakeLists.txt
src/: main.cpp
